@@ -1,4 +1,4 @@
-.\"	$NetBSD: racoon.conf.5,v 1.51 2009/01/05 06:03:58 tteras Exp $
+.\"	$NetBSD: racoon.conf.5,v 1.52 2009/01/10 19:08:40 tteras Exp $
 .\"
 .\"	Id: racoon.conf.5,v 1.54 2006/08/22 18:17:17 manubsd Exp
 .\"
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 5, 2009
+.Dd January 10, 2009
 .Dt RACOON.CONF 5
 .Os
 .\"
@@ -491,6 +491,13 @@ except that the individual component values of an
 identifier may specified as
 .Ic *
 to match any value (e.g. "C=XX, O=MyOrg, OU=*, CN=Mine").
+The format of the
+specification should correspond to RFC 2253; in particular, commas and certain
+other characters -
+.Ic ,=+<>#;
+- may be included in a name by preceeding them with a backslash "\\", and
+arbitrary characters may be inserted in a name with the "\\nn" escape, where
+nn is the hex representation of the ascii value of the desired character.
 Alternative acceptable peer identifiers may be specified by repeating the
 .Ic peers_identifier
 statement.
@@ -1010,6 +1017,7 @@ directive.
 Sainfos will only be used if their remoteid matches the ph1id of the
 remote section used for phase 1.
 Defaults to 0, which is also the default for ph1id.
+.El
 .\"
 .Pp
 .Xr racoon 8
